[gd_scene load_steps=3 format=3 uid="uid://dqwe8emotetest"]

[ext_resource type="Script" uid="uid://emotetesterscript" path="res://src/test/emote/emote_tester_standalone.gd" id="1_script"]
[ext_resource type="PackedScene" uid="uid://cy43hvd5bivso" path="res://src/ui/components/backpack/avatar_preview.tscn" id="2_avatar_preview"]

[node name="EmoteTesterStandalone" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="AvatarPreview" parent="." instance=ExtResource("2_avatar_preview")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2
show_platform = true

[node name="StatusLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 20.0
offset_right = 100.0
offset_bottom = 50.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
text = "Loading avatar..."
horizontal_alignment = 1

[node name="EmoteNameLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 55.0
offset_right = 200.0
offset_bottom = 90.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 20
text = ""
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -75.0
offset_top = -60.0
offset_right = 75.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
text = "Start Test"

[node name="Timer" type="Timer" parent="."]
